--- a/VirtualTourist/Base.lproj/Main.storyboard
+++ b/VirtualTourist/Base.lproj/Main.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Travel Locations Map View Controller-->
+        <!--Virtual Tourist-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="TravelLocationsMapViewController" customModule="VirtualTourist" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Virtual Tourist" id="BYZ-38-t0r" customClass="TravelLocationsMapViewController" customModule="VirtualTourist" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -33,7 +33,7 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="DgZ-Lf-KdA" secondAttribute="trailing" id="wGG-qd-cJk"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="awH-LG-cFK"/>
+                    <navigationItem key="navigationItem" title="Travel Locations" id="awH-LG-cFK"/>
                     <connections>
                         <outlet property="mapView" destination="DgZ-Lf-KdA" id="X9B-ew-Xkp"/>
                     </connections>
@@ -51,16 +51,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Cfa-Ik-Fam">
-                                <rect key="frame" x="0.0" y="44" width="414" height="207"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="103.5"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="Cfa-Ik-Fam" secondAttribute="height" multiplier="2:1" id="PjC-A7-xbf"/>
+                                    <constraint firstAttribute="width" secondItem="Cfa-Ik-Fam" secondAttribute="height" multiplier="4:1" id="PjC-A7-xbf"/>
                                 </constraints>
                                 <connections>
                                     <outlet property="delegate" destination="1Ci-3e-3lS" id="bhN-90-iBw"/>
                                 </connections>
                             </mapView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ERJ-pS-phe">
-                                <rect key="frame" x="0.0" y="251" width="414" height="611"/>
+                                <rect key="frame" x="0.0" y="147.5" width="414" height="714.5"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="vOc-HF-qtG">
                                     <size key="itemSize" width="187" height="199"/>
@@ -76,11 +76,16 @@
                                             <rect key="frame" x="0.0" y="0.0" width="187" height="199"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7YB-Ff-4z6">
-                                                    <rect key="frame" x="-27" y="-24" width="214" height="223"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7YB-Ff-4z6">
+                                                    <rect key="frame" x="0.0" y="0.0" width="187" height="199"/>
                                                 </imageView>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="7YB-Ff-4z6" secondAttribute="bottom" id="1fW-DC-jMV"/>
+                                                <constraint firstItem="7YB-Ff-4z6" firstAttribute="top" secondItem="vOS-vS-yMu" secondAttribute="top" id="3dk-S3-4NX"/>
+                                                <constraint firstAttribute="trailing" secondItem="7YB-Ff-4z6" secondAttribute="trailing" id="4Ss-mf-GEW"/>
+                                                <constraint firstItem="7YB-Ff-4z6" firstAttribute="leading" secondItem="vOS-vS-yMu" secondAttribute="leading" id="8D7-Ri-X4Q"/>
+                                            </constraints>
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="187" height="199"/>
                                         <connections>
@@ -94,7 +99,7 @@
                                 </connections>
                             </collectionView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7yR-dj-d5s">
-                                <rect key="frame" x="146.5" y="806" width="121.5" height="31"/>
+                                <rect key="frame" x="146.5" y="811" width="121.5" height="31"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="New Collection" cornerStyle="capsule"/>
                             </button>
@@ -106,7 +111,7 @@
                             <constraint firstItem="Cfa-Ik-Fam" firstAttribute="leading" secondItem="5Mw-iY-QHV" secondAttribute="leading" id="55X-Ec-amc"/>
                             <constraint firstItem="Cfa-Ik-Fam" firstAttribute="top" secondItem="5Mw-iY-QHV" secondAttribute="top" id="6av-yg-paL"/>
                             <constraint firstItem="5Mw-iY-QHV" firstAttribute="bottom" secondItem="ERJ-pS-phe" secondAttribute="bottom" id="CIU-TU-386"/>
-                            <constraint firstItem="5Mw-iY-QHV" firstAttribute="bottom" secondItem="7yR-dj-d5s" secondAttribute="bottom" constant="25" id="IRP-bW-Y1h"/>
+                            <constraint firstItem="5Mw-iY-QHV" firstAttribute="bottom" secondItem="7yR-dj-d5s" secondAttribute="bottom" constant="20" id="IRP-bW-Y1h"/>
                             <constraint firstItem="5Mw-iY-QHV" firstAttribute="trailing" secondItem="ERJ-pS-phe" secondAttribute="trailing" id="Llh-AO-JE4"/>
                             <constraint firstItem="ERJ-pS-phe" firstAttribute="leading" secondItem="5Mw-iY-QHV" secondAttribute="leading" id="Uq9-WG-W5J"/>
                             <constraint firstItem="ERJ-pS-phe" firstAttribute="top" secondItem="Cfa-Ik-Fam" secondAttribute="bottom" id="Z6a-5z-i4L"/>
@@ -114,6 +119,8 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="collectionView" destination="ERJ-pS-phe" id="evH-Ct-j1A"/>
+                        <outlet property="flowLayout" destination="vOc-HF-qtG" id="Oul-k1-V7Q"/>
                         <outlet property="mapView" destination="Cfa-Ik-Fam" id="ckK-u2-Oew"/>
                     </connections>
                 </viewController>
