--- a/VirtualTourist/Base.lproj/Main.storyboard
+++ b/VirtualTourist/Base.lproj/Main.storyboard
@@ -60,7 +60,7 @@
                                 </connections>
                             </mapView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ERJ-pS-phe">
-                                <rect key="frame" x="0.0" y="144" width="414" height="752"/>
+                                <rect key="frame" x="0.0" y="144" width="414" height="718"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="vOc-HF-qtG">
                                     <size key="itemSize" width="187" height="199"/>
@@ -76,7 +76,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="187" height="199"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7YB-Ff-4z6">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7YB-Ff-4z6">
                                                     <rect key="frame" x="0.0" y="0.0" width="187" height="199"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="75" id="HLj-Uv-lTb"/>
@@ -113,19 +113,27 @@
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="HAe-of-jYB">
                                 <rect key="frame" x="188.5" y="429.5" width="37" height="37"/>
                             </activityIndicatorView>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This travel location has no images." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MIF-7J-vry">
+                                <rect key="frame" x="76.5" y="437.5" width="261.5" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="5Mw-iY-QHV"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="MIF-7J-vry" firstAttribute="centerX" secondItem="9lP-0c-bRD" secondAttribute="centerX" id="2FH-3k-wLz"/>
                             <constraint firstItem="7yR-dj-d5s" firstAttribute="centerX" secondItem="9lP-0c-bRD" secondAttribute="centerX" id="45z-uW-NQg"/>
                             <constraint firstItem="Cfa-Ik-Fam" firstAttribute="leading" secondItem="5Mw-iY-QHV" secondAttribute="leading" id="55X-Ec-amc"/>
                             <constraint firstItem="Cfa-Ik-Fam" firstAttribute="top" secondItem="5Mw-iY-QHV" secondAttribute="top" id="6av-yg-paL"/>
                             <constraint firstItem="Cfa-Ik-Fam" firstAttribute="trailing" secondItem="5Mw-iY-QHV" secondAttribute="trailing" id="CnH-fU-bjV"/>
+                            <constraint firstItem="ERJ-pS-phe" firstAttribute="bottom" secondItem="5Mw-iY-QHV" secondAttribute="bottom" id="DbH-8C-2Sd"/>
                             <constraint firstItem="HAe-of-jYB" firstAttribute="centerY" secondItem="9lP-0c-bRD" secondAttribute="centerY" id="GzP-kB-YzY"/>
                             <constraint firstItem="5Mw-iY-QHV" firstAttribute="bottom" secondItem="7yR-dj-d5s" secondAttribute="bottom" constant="20" id="IRP-bW-Y1h"/>
                             <constraint firstItem="HAe-of-jYB" firstAttribute="centerX" secondItem="9lP-0c-bRD" secondAttribute="centerX" id="Lfu-Hg-cgf"/>
                             <constraint firstItem="5Mw-iY-QHV" firstAttribute="trailing" secondItem="ERJ-pS-phe" secondAttribute="trailing" id="Llh-AO-JE4"/>
-                            <constraint firstAttribute="bottom" secondItem="ERJ-pS-phe" secondAttribute="bottom" id="MZ1-gd-Yct"/>
+                            <constraint firstItem="MIF-7J-vry" firstAttribute="centerY" secondItem="9lP-0c-bRD" secondAttribute="centerY" id="Oo9-Rw-JA1"/>
                             <constraint firstItem="ERJ-pS-phe" firstAttribute="leading" secondItem="5Mw-iY-QHV" secondAttribute="leading" id="Uq9-WG-W5J"/>
                             <constraint firstItem="ERJ-pS-phe" firstAttribute="top" secondItem="Cfa-Ik-Fam" secondAttribute="bottom" id="Z6a-5z-i4L"/>
                             <constraint firstItem="5Mw-iY-QHV" firstAttribute="trailing" secondItem="Cfa-Ik-Fam" secondAttribute="trailing" id="aK0-OF-hCZ"/>
@@ -138,6 +146,7 @@
                         <outlet property="button" destination="7yR-dj-d5s" id="ytr-hA-thU"/>
                         <outlet property="collectionView" destination="ERJ-pS-phe" id="evH-Ct-j1A"/>
                         <outlet property="flowLayout" destination="vOc-HF-qtG" id="Oul-k1-V7Q"/>
+                        <outlet property="label" destination="MIF-7J-vry" id="pa5-Zz-meO"/>
                         <outlet property="mapView" destination="Cfa-Ik-Fam" id="ckK-u2-Oew"/>
                     </connections>
                 </viewController>
